<resources>
    <string name="app_name">Restaurants</string>
    <string name="location">Location</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="siginin">Sigin In</string>
    <string name="user">User</string>


    <string name="tab1">Tab1</string>
    <string name="tab2">Food Procssing Status</string>
    <string name="tab3">Invoice</string>

    <string name="productslist">Products</string>

    <string name="Waiter_view">Waiter</string>
    <string name="cashier_view">Cashier</string>

    <string name="Waiter_conform">Conform</string>
    <string name="Waiter_reorder">Re-Order</string>
    <string name="Waiter_cancel">Cancel</string>
</resources>
